# TechDetect

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
techdetect/: __init__.py  cli.py  fingerprints.json  profiler.py
