[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "techdetect"
version = "0.1.0"
description = "Detect technologies running on any website via HTTP — headers, JS globals, cookies, meta tags, SSL and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "github.com/TeamCyberHawkz"}]
keywords = ["wappalyzer", "technology", "detection", "techdetect", "fingerprint", "web", "cms", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "h2>=4.1.0",
]

[project.scripts]
techdetect = "techdetect.cli:main"

[project.urls]
Homepage = "https://github.com/TeamCyberHawkz/techdetect"
Repository = "https://github.com/TeamCyberHawkz/techdetect"
Issues = "https://github.com/TeamCyberHawkz/techdetect/issues"

[tool.setuptools.packages.find]
include = ["techdetect*"]

[tool.setuptools.package-data]
techdetect = ["fingerprints.json"]
